--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0"
+            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" >
    <children>
       <RadioButton layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
          <toggleGroup>
@@ -16,7 +18,11 @@
          </toggleGroup>
       </RadioButton>
       <RadioButton layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Load from file" toggleGroup="$tg" />
-      <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" text="Continue" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+
+      <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" text="Continue" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0"
+      onAction="#handleSourceContinueButtonAction"
+      />
+
       <Label layoutX="82.0" layoutY="14.0" text="Select Data Source">
          <font>
             <Font size="23.0" />
