Logic+UI to establish selected data-source

--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -12,12 +12,13 @@
             xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" >
    <children>
-      <RadioButton layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
+      <RadioButton fx:id="sdsFromManualRadio" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually"
+                   AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
          <toggleGroup>
             <ToggleGroup fx:id="tg" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Load from file" toggleGroup="$tg" />
+      <RadioButton fx:id="sdsFromFileRadio" layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Load from file" toggleGroup="$tg" />
 
       <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" text="Continue" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0"
       onAction="#handleSourceContinueButtonAction"
