--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0"
-      xmlns="http://javafx.com/javafx/9.0.1"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" >
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -78,22 +73,21 @@ New (looks like Java 9 but works ok):
 
 <AnchorPane id="AnchorPane" prefHeight="194" prefWidth="320" xmlns:fx="http://javafx.com/fxml">
     <children>
-      <GridPane layoutX="14.0" layoutY="14.0" prefHeight="132.0" prefWidth="280.0"
-                AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="14.0">
+      <GridPane layoutX="14.0" layoutY="14.0" prefHeight="132.0" prefWidth="599.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="14.0">
 
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="112.0" minWidth="10.0" prefWidth="82.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="151.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="2.0" prefWidth="81.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="518.0" minWidth="0.0" prefWidth="518.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button fx:id="encodeButton" mnemonicParsing="false" text="Encode" onAction="#handleEncodeButtonAction"/>
-            <Label fx:id="encodeLabel" text="Encode a message into a file" GridPane.columnIndex="1" />
-            <Button fx:id="decodeButton" mnemonicParsing="false" text="Decode" GridPane.rowIndex="1" onAction="#handleDecodeButtonAction"/>
-            <Label fx:id="decodeLabel" text="Decode a message from a file" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="encodeButton" mnemonicParsing="false" onAction="#handleEncodeButtonAction" text="Encode" />
+            <Label fx:id="encodeLabel" text="Encode a message into a dataset" GridPane.columnIndex="1" />
+            <Button fx:id="decodeButton" mnemonicParsing="false" onAction="#handleDecodeButtonAction" text="Decode" GridPane.rowIndex="1" />
+            <Label fx:id="decodeLabel" text="Decode a message from a dataset" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
     </children>
