--- a/src/main/resources/fxml/EnterMessageText.fxml
+++ b/src/main/resources/fxml/EnterMessageText.fxml
@@ -10,7 +10,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" >
    <children>
       <GridPane layoutX="27.0" layoutY="29.0" prefHeight="360.0" prefWidth="570.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
         <columnConstraints>
@@ -34,7 +35,8 @@
             <TextArea fx:id="emTextArea" prefHeight="285.0" prefWidth="726.0" promptText="Enter your message here" GridPane.rowIndex="1" />
             <AnchorPane prefHeight="71.0" prefWidth="726.0" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="emOkButton" layoutX="660.0" layoutY="14.0" mnemonicParsing="false" text="Ok" />
+                  <Button fx:id="emOkButton" layoutX="660.0" layoutY="14.0" mnemonicParsing="false" text="Ok"
+                  onAction="#handleEntMsgButtonAction" />
                </children>
             </AnchorPane>
          </children>
