--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -24,7 +24,7 @@
       onAction="#handleSourceContinueButtonAction"
       />
 
-      <Label layoutX="82.0" layoutY="14.0" text="Select Data Source">
+      <Label layoutX="61.0" layoutY="14.0" text="Select Data-Set Source">
          <font>
             <Font size="23.0" />
          </font>
