--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -21,7 +21,7 @@
       <RadioButton fx:id="sdsFromFileRadio" layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Load from file" toggleGroup="$tg" />
 
       <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" text="Continue" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0"
-      onAction="#handleSourceContinueButtonAction"
+      onAction="handleDataSrcCntButtonAction"
       />
 
       <Label layoutX="61.0" layoutY="14.0" text="Select Data-Set Source">
