--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -15,13 +15,14 @@
       <RadioButton fx:id="sdsFromManualRadio" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually"
                    AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
          <toggleGroup>
-            <ToggleGroup fx:id="tg" />
+            <ToggleGroup fx:id="dstg" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="sdsFromFileRadio" layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Load from file" toggleGroup="$tg" />
+      <RadioButton fx:id="sdsFromFileRadio" layoutX="14.0" layoutY="117.0" mnemonicParsing="false" text="Load from file" toggleGroup="$dstg" />
 
-      <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" text="Continue" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0"
-      onAction="handleDataSrcCntButtonAction"
+      <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" text="Continue"
+              AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0"
+      onAction="#handleDataSrcCntButtonAction"
       />
 
       <Label layoutX="61.0" layoutY="14.0" text="Select Data-Set Source">
