BROKEN: More work on controller-instance handling

--- a/src/main/resources/fxml/SelectMessageSource.fxml
+++ b/src/main/resources/fxml/SelectMessageSource.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0"
+            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+            <!-- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController"> -->
    <children>
       <RadioButton fx:id="smsFromManualRadio" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
          <toggleGroup>
