--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -9,8 +9,8 @@
 
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0"
-            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" >
+            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+            <!-- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" > -->
    <children>
       <RadioButton fx:id="sdsFromManualRadio" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually"
                    AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
