--- a/src/main/resources/fxml/EnterDataSetText.fxml
+++ b/src/main/resources/fxml/EnterDataSetText.fxml
@@ -11,8 +11,8 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="754.0"
- xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1"
- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" >
+ xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+ <!-- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" > -->
 
    <children>
       <GridPane layoutX="27.0" layoutY="29.0" prefHeight="360.0" prefWidth="570.0" AnchorPane.bottomAnchor="14.0"
