Lots of UI improvements
Now use the term 'shopping list' rather than 'data set'

Also some other tweaks

--- a/src/main/resources/fxml/EnterDataSetText.fxml
+++ b/src/main/resources/fxml/EnterDataSetText.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="754.0"
- xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+ xmlns:fx="http://javafx.com/fxml/1" >
  <!-- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" > -->
 
    <children>
@@ -29,14 +29,14 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label prefHeight="37.0" prefWidth="226.0" text="Enter Data-Set Text">
+                  <Label prefHeight="37.0" prefWidth="226.0" text="Enter Shopping List Text">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
                </children>
             </VBox>
-            <TextArea fx:id="edsTextArea" prefHeight="285.0" prefWidth="726.0" promptText="Enter your data-set here" GridPane.rowIndex="1" />
+            <TextArea fx:id="edsTextArea" prefHeight="285.0" prefWidth="726.0" promptText="Enter your shopping list here" GridPane.rowIndex="1" />
             <AnchorPane prefHeight="71.0" prefWidth="726.0" GridPane.rowIndex="2">
                <children>
                   <Button fx:id="edsOkButton" layoutX="660.0" layoutY="14.0" mnemonicParsing="false" text="Ok"
