--- a/src/main/resources/fxml/SelectDataSource.fxml
+++ b/src/main/resources/fxml/SelectDataSource.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0"
-            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="420.0"
+            xmlns:fx="http://javafx.com/fxml/1" >
             <!-- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController" > -->
    <children>
       <RadioButton fx:id="sdsFromManualRadio" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually"
@@ -25,7 +25,7 @@
       onAction="#handleDataSrcCntButtonAction"
       />
 
-      <Label layoutX="61.0" layoutY="14.0" text="Select Data-Set Source">
+      <Label layoutX="61.0" layoutY="14.0" text="Select Source of Shopping List">
          <font>
             <Font size="23.0" />
          </font>
