--- a/src/main/resources/fxml/SelectDecodeSource.fxml
+++ b/src/main/resources/fxml/SelectDecodeSource.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="353.0"
-            xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="293.0" prefWidth="460.0"
+            xmlns:fx="http://javafx.com/fxml/1" >
             <!-- fx:controller="engineer.maxbarraclough.txtshuffle.gui.FXMLController"> -->
    <children>
       <RadioButton fx:id="sdcsFromManualRadio" layoutX="14.0" layoutY="78.0" mnemonicParsing="false" text="Enter text manually" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="78.0">
@@ -20,7 +20,7 @@
 
       <Button layoutX="371.0" layoutY="301.0" mnemonicParsing="false" onAction="#handleDecSrcCntButtonAction" text="Continue" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
 
-      <Label layoutX="33.0" layoutY="14.0" text="Select Encoded-Data Source">
+      <Label layoutX="33.0" layoutY="14.0" text="Select Source of Scrambled Shopping List">
          <font>
             <Font size="23.0" />
          </font>
